Remove gap space on some nospace split components (fixes #11457) (#11512)

--- a/media/css/firefox/privacy/common.scss
+++ b/media/css/firefox/privacy/common.scss
@@ -25,7 +25,6 @@ $brand-theme: 'firefox';
 /* -------------------------------------------------------------------------- */
 // Reduce vertical padding on stacked split components
 
-.privacy-promise-hero,
 .mzp-c-split + .mzp-c-split {
     padding-top: 0;
 }
